syntax = "proto3";

package user;
option go_package = "./user";

message UserInfo {
  string Username = 1;
  string Password = 2;
  string Email = 3;
  string Phone = 4;
}

message RegisterRequest {
  UserInfo User = 1;
}

message RegisterResponse {
  bool Success = 1;
}

message LoginRequest {
  UserInfo User = 1;
}

message LoginResponse {
  int64 UserId = 1;
}

message CreateAccountRequest {
  int64 UserID = 1;
  string Currency = 2;
  double Balance = 3;
}

message CreateAccountResponse {
  bool Success = 1;
}

message TransferRequest {
  int64 FromID = 1;
  int64 ToID = 2;
  string AccountNumber = 3;
  double Amount = 4;
}

message TransferResponse {
  bool Success = 1;
}

message TransferCompensationRequest {
  int64 FromID = 1;
  int64 ToID = 2;
  string AccountNumber = 3;
  double Amount = 4;
}

message TransferCompensationResponse {
  bool Success = 1;
}

service User {
  rpc Register(RegisterRequest) returns(RegisterResponse);
  rpc Login(LoginRequest) returns(LoginResponse);
  rpc Transfer(TransferRequest) returns(TransferResponse);
  rpc CreateAccount(CreateAccountRequest) returns(CreateAccountResponse);
  rpc TransferCompensation(TransferCompensationRequest) returns(TransferCompensationResponse);
}
